# ai-toys

./: .pre-commit-config.yaml  README.md  codeexplorer-anthropic.py  codeexplorer-ollama.py  codeexplorer.py  copyeditor.py  cvevaluator.py  entrypoint.py  imagegen-dalle3.py  imagegen-gpt4o.py  pyproject.toml  qwen.md  tools1.md  tools2.md  tools3.md
