[project]
name = "aitoys"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.49.0",
    "ibm-watsonx-ai>=1.3.3",
    "rich>=14.0.0",
    "streamlit>=1.44.0",
    "watchdog>=6.0.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion="3.12"

[tool.ruff]
line-length = 77
